# 0.5.2-cms

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: connections.py  main.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: AllContacts.js  App.js  GlobalContext.js  MapView.js  data.js  utilities.js
client/src/components/: Home.js
client/src/components/modules/: AddContactForm.js  Navbar.js
client/src/components/pages/: AllContacts.js  ContactBook.js  GroupPage.js  Home.js  MapView.js  Profile.js
client/src/styles/: App.css  groups.css  home.css  navbar.css  profile.css
flask_app/: __init__.py  auth.py  db.py  webFlask.py
instance/: flask_app.sqlite
server/: .env  __init__.py  app.py  auth.py  contact.py  requirements.txt  schema.sql
server/database/: models.py
server/resources/: auth.py  contact.py  routes.py
server/static/react/: asset-manifest.json  precache-manifest.1bbd6f03fcec6a61af27205b50970ac3.js  precache-manifest.7dc062685fb9c3d315e5bc7bf8b90e58.js  service-worker.js
server/static/react/js/: 2.7d0a5015.chunk.js.map  2.c7484e8a.chunk.js  2.c7484e8a.chunk.js.map  main.4182611e.chunk.js  main.4182611e.chunk.js.map  main.a32e4ef3.chunk.js  main.a32e4ef3.chunk.js.map  runtime-main.d76fd469.js  runtime-main.d76fd469.js.map
server/templates/: index.html
