[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "052-cms"
version = "0.1.0"
[tool.poetry.dependencies]
click = "^7.1"
flask = "^1.1"
python = "^3.7"
werkzeug = "^1.0"
[tool.poetry.dev-dependencies]
